crates/reporters/rwx_v1_json/src/snapshots/abq_rwx_v1_json__test__native_runner_error_seen_as_other_error.snap
---
source: crates/reporters/rwx_v1_json/src/lib.rs
expression: json
---
{
  "$schema": "https://raw.githubusercontent.com/rwx-research/test-results-schema/main/v1.json",
  "framework": {
    "kind": "other",
    "language": "other",
    "providedKind": "zframework",
    "providedLanguage": "zlang"
  },
  "summary": {
    "status": {
      "kind": "failed"
    },
    "tests": 0,
    "otherErrors": 1,
    "retries": 0,
    "canceled": 0,
    "failed": 0,
    "pended": 0,
    "quarantined": 0,
    "skipped": 0,
    "successful": 0,
    "timedOut": 0,
    "todo": 0
  },
  "tests": []
}
