crates/reporters/rwx_v1_json/src/snapshots/abq_rwx_v1_json__test__retry_is_native_runner_error.snap
---
source: crates/reporters/rwx_v1_json/src/lib.rs
expression: json
---
{
  "$schema": "https://raw.githubusercontent.com/rwx-research/test-results-schema/main/v1.json",
  "framework": {
    "kind": "other",
    "language": "other",
    "providedKind": "zframework",
    "providedLanguage": "zlang"
  },
  "summary": {
    "status": {
      "kind": "failed"
    },
    "tests": 1,
    "otherErrors": 1,
    "retries": 0,
    "canceled": 0,
    "failed": 1,
    "pended": 0,
    "quarantined": 0,
    "skipped": 0,
    "successful": 0,
    "timedOut": 0,
    "todo": 0
  },
  "tests": [
    {
      "id": "id1",
      "name": "app::module::test1",
      "lineage": [
        "TopLevel",
        "SubModule",
        "Test"
      ],
      "location": {
        "file": "a/b/x.file",
        "line": 10,
        "column": 15
      },
      "attempt": {
        "durationInNanoseconds": 0,
        "meta": {
          "abq_metadata": {
            "runner": 1,
            "worker": 0
          }
        },
        "status": {
          "kind": "failed",
          "message": "I failed once"
        },
        "stderr": "my stdout",
        "stdout": "my stderr",
        "startedAt": "1994-11-05T13:15:30Z",
        "finishedAt": "1994-11-05T13:17:30Z"
      }
    }
  ],
  "otherErrors": [
    {
      "message": "The native runner failed!"
    }
  ]
}
